# telemetry-dashboard

./: .gitignore  .replit  README.md  collector_service.py  main.py  pyproject.toml  todo_app.py
components/: charts.py  logs.py  metrics.py  traces.py
styles/: custom.css
templates/: index.html
utils/: data_processor.py
